--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I am totally hosted with GitHub Pages.</p>
+<h2>simplRstats</h2>
+<p>I am hosted on GitHub Pages.</p>
 </body>
 </html>
