--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>Hello World</h1>
-<h2>simplRstats</h2>
-<p>I am hosted on GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+    <h2>simplRstats</h2>
+    <p>I am hosted on GitHub Pages.</p>
+  </body>
 </html>
