--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
+
+---
+layout: default
+---
   <body>
     <h1>Hello World!</h1>
     <h2>simplRstats</h2>
     <p>I am hosted on GitHub Pages.</p>
   </body>
-</html>
