--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-  <body>
+---
+layout: html
+---
+
+<body>
     <h1>Hello World!</h1>
     <h2>simplRstats</h2>
     <p>I am hosted on GitHub Pages.</p>
