--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:simplrstats@gmail.com">email</a></li>
-        		<li><a href="https://github.com/simplrstats">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/simplrstats">github.com/simplrstats</a></li>
 			</ul>
 		</footer>
 	</body>
