--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+---
+layout: default
+title: simplRstats
+---
+<div class="blurb">
+	<h1>Welcome </h1>
+	<p>Making statistics accessible 
+		<a href="/about">Read more...</a></p>
+	<!-- /.blurb -->
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -17,7 +27,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Welcome</h1>
-				<p>Making statistics accessible <a href="/about">Read more...</a></p>
+				
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
