--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: simplRstats
 ---
 <div class="blurb">
-	<h1>Welcome </h1>
+	<h1>simplRstats </h1>
 	<p>Making statistics accessible 
 		<a href="/about">Read more...</a></p>
 	<!-- /.blurb -->
