--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,11 @@ title: simplRstats
 ---
 <div class="blurb">	<h1>simplRstats </h1>	
 
-<p>Making statistics accessible 		<a href="/about">Read more...</a></p>	<!-- /.blurb -->
+<p>Making statistics accessible 		<a href="/about">Read more...</a></p>	
 
 <p>At simplRstats, we offer statistical consultancy and tailored in-house statistics courses for Undergraduates and Postgraduates in the R programming language.
 
 Our aim is to provide all course attendees with a solid foundation in statistics, introducing participants to coding in R, and the steps involved in visualising, analysing and presenting data for scientific publications. 
 
 Each course we deliver comprises of a carefully thought out combination of lectures, group work and hands-on practicals to ensure all participants leave with the confidence to perform independent analyses.</p>
+<!-- /.blurb -->
